// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonIcon should render correctly 1`] = `
"<button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-ikltse-color-default nextui-c-frcIsU-iPNlwO-size-md nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-yxrPS-animated-true nextui-button\\" data-state=\\"ready\\"><div><span class=\\"nextui-button-icon\\"><svg></svg><style>
        .nextui-button-icon {
          position: absolute;
          left: var(--nextui-button-padding);
          right: auto;
          top: 50%;
          transform: translateY(-50%);
          display: flex;
          justify-content: center;
          align-items: center;
          color: var(--nextui-button-color);
          z-index: 1;
        }
        .nextui-button-icon :global(svg) {
          background: transparent;
          height: calc(var(--nextui-button-height) / 2.35);
          width: calc(var(--nextui-button-height) / 2.35);
        }
        .nextui-button-icon-right {
          right: var(--nextui-button-padding);
          left: auto;
        }
        .nextui-button-icon-single {
          position: static;
          transform: none;
        }
      </style></span><div class=\\"nextui-button-text nextui-button-text-left\\">action</div></div></button>"
`;

exports[`ButtonIcon should work with right 1`] = `
"<button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-ikltse-color-default nextui-c-frcIsU-iPNlwO-size-md nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-yxrPS-animated-true nextui-button\\" data-state=\\"ready\\"><div><span class=\\"nextui-button-icon nextui-button-icon-right\\"><svg></svg><style>
        .nextui-button-icon {
          position: absolute;
          left: var(--nextui-button-padding);
          right: auto;
          top: 50%;
          transform: translateY(-50%);
          display: flex;
          justify-content: center;
          align-items: center;
          color: var(--nextui-button-color);
          z-index: 1;
        }
        .nextui-button-icon :global(svg) {
          background: transparent;
          height: calc(var(--nextui-button-height) / 2.35);
          width: calc(var(--nextui-button-height) / 2.35);
        }
        .nextui-button-icon-right {
          right: var(--nextui-button-padding);
          left: auto;
        }
        .nextui-button-icon-single {
          position: static;
          transform: none;
        }
      </style></span><div class=\\"nextui-button-text nextui-button-text-right\\">action</div></div></button>"
`;

exports[`ButtonIcon should work without text 1`] = `
"<button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-ikltse-color-default nextui-c-frcIsU-iPNlwO-size-md nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-yxrPS-animated-true nextui-button\\" data-state=\\"ready\\"><span class=\\"nextui-button-icon nextui-button-icon-right nextui-button-icon-single\\"><svg></svg><style>
        .nextui-button-icon {
          position: absolute;
          left: var(--nextui-button-padding);
          right: auto;
          top: 50%;
          transform: translateY(-50%);
          display: flex;
          justify-content: center;
          align-items: center;
          color: var(--nextui-button-color);
          z-index: 1;
        }
        .nextui-button-icon :global(svg) {
          background: transparent;
          height: calc(var(--nextui-button-height) / 2.35);
          width: calc(var(--nextui-button-height) / 2.35);
        }
        .nextui-button-icon-right {
          right: var(--nextui-button-padding);
          left: auto;
        }
        .nextui-button-icon-single {
          position: static;
          transform: none;
        }
      </style></span></button>"
`;
